<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="bobby.irawan.moviecatalogue.presentation.home.HomeFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_favoriteFragment"
            app:destination="@id/favoriteFragment" />
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="bobby.irawan.moviecatalogue.favorite.ui.FavoriteFragment"
        app:moduleName="MovieCatalogue.favorite"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite"/>

    <fragment
        android:id="@+id/searchFragment"
        android:name="bobby.irawan.moviecatalogue.search.ui.SearchFragment"
        android:label="@string/title_search"
        app:moduleName="MovieCatalogue.search"
        tools:layout="@layout/fragment_search" />


</navigation>