<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_view_ascending"
        style="@style/Text.SubTitle2.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/title_a_to_z"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_descending"
        style="@style/Text.SubTitle2.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/title_z_to_a"
        app:layout_constraintEnd_toEndOf="@id/text_view_ascending"
        app:layout_constraintStart_toStartOf="@id/text_view_ascending"
        app:layout_constraintTop_toBottomOf="@id/text_view_ascending" />

    <TextView
        android:id="@+id/text_view_highest_vote_average"
        style="@style/Text.SubTitle2.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/title_highest_vote_average"
        app:layout_constraintEnd_toEndOf="@id/text_view_descending"
        app:layout_constraintStart_toStartOf="@id/text_view_descending"
        app:layout_constraintTop_toBottomOf="@id/text_view_descending" />

    <TextView
        android:id="@+id/text_view_lowest_vote_average"
        style="@style/Text.SubTitle2.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:padding="8dp"
        android:text="@string/title_lowest_vote_average"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/text_view_highest_vote_average"
        app:layout_constraintStart_toStartOf="@id/text_view_highest_vote_average"
        app:layout_constraintTop_toBottomOf="@id/text_view_highest_vote_average" />

</androidx.constraintlayout.widget.ConstraintLayout>