<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".presentation.detail.movie.MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:paddingBottom="92dp">

        <ImageView
            android:id="@+id/image_view_backdrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/title_image_movie_backdrop"
            android:scaleType="fitXY" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/overlay_top_shadow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/overlay_bottom_shadow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_view_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/title_image_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back_white" />

        <ImageView
            android:id="@+id/image_view_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/title_image_share"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_share_white" />

        <ImageView
            android:id="@+id/image_view_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/title_image_favorite"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toStartOf="@id/image_view_share"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_favorite_border" />

        <TextView
            android:id="@+id/text_view_movie_title"
            style="@style/Text.Header.Bold.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/no_available_information"
            app:layout_constraintBottom_toTopOf="@id/text_view_movie_genre"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_view_movie_genre"
            android:layout_width="0dp"
            style="@style/Text.SubTitle2"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:textColor="@android:color/white"
            android:text="@string/no_available_information"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_view_movie_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/layout_bottom_sheet"
        layout="@layout/bottom_sheet_movie_detail" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>